fixed planimetria image not showing a background correctly

--- a/metroquadro-frontend/styles/Immobile.module.css
+++ b/metroquadro-frontend/styles/Immobile.module.css
@@ -63,6 +63,7 @@ div.planimetriaContainer {
     flex-direction: row;
     justify-content: center;
     position: relative;
+    background-color: var(--mqBlack);
 }
 
 section.linkedFeaturedHouses {
